Fix navbar title color for dark mode

--- a/css/index.css
+++ b/css/index.css
@@ -581,6 +581,10 @@ footer a:hover {
     color: rgba(255, 255, 255, 0.8)
   }
 
+  .nav_regular li {
+    color: rgba(255, 255, 255, 0.8);
+  }
+
   .nav_regular a:hover {
     color: white;
   }
